load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

cc_library(
    name = "ThreadPool",
    hdrs = [
        "ThreadPool.h",
    ],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "example",
    srcs = [
        "example.cpp",
    ],
    copts = [],
    deps = [
        ":ThreadPool",
    ],
)

cc_test(
    name = "ThreadPool_test",
    srcs = [
        "ThreadPool_test.cpp",
    ],
    deps = [
        ":ThreadPool",
        "@gtest",
        "@gtest//:gtest_main",
    ],
)
